# qt5-playground

./: CMakeLists.txt  fpchart.cpp  fpchart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pakfile.cpp  pakfile.h
doc/example-protocols/comiss/bga/bga272/: ap141629.pak  ap141631.pak  ap141649.pak  ap141652.pak  ap141655.pak  ap141658.pak  ja131905.pak  no142312.pak  no142313.pak  no142317.pak
doc/example-protocols/comiss/exoten/min.dat/: ok252151.pak  ok252152.pak  ok252153.pak
doc/example-protocols/comiss/plcc/plcc.dat/: jn302043.pak  ok132029.pak  ok172337.pak  ok232322.pak  ok252149.pak  ok271704.pak  ok271711.pak
doc/example-protocols/comiss/qfp/qfp304/: ok112134.pak  ok132051.pak  ok172323.pak  ok172324.pak  ok172326.pak
doc/example-protocols/comiss/so/so16.ouh/: ap141736.pak  ap141737.pak  ap141738.pak  ap141739.pak  ap141741.pak  ap141746.pak  ap141753.pak  ap141755.pak  ap141816.pak  ap141820.pak  ap141821.pak  ap141824.pak  ap141827.pak  ap141829.pak  ap141831.pak  ap141837.pak  ap141841.pak  ap141843.pak  ap141848.pak  ap141851.pak  ok272026.pak  ok272027.pak  ok272029.pak  ok272031.pak  ok272032.pak  ok272033.pak  ok272034.pak  ok272035.pak  ok272036.pak  ok272038.pak
doc/example-protocols/hotgas/bga/bga_mit.dat/: ap141627.pak  no142303.pak  no142308.pak  no142310.pak
doc/example-protocols/hotgas/exoten/min.dat/: ok252158.pak  ok252159.pak
doc/example-protocols/hotgas/plcc/plcc.dat/: ok112151.pak  ok132025.pak  ok132026.pak  ok132027.pak  ok132031.pak  ok172320.pak  ok232321.pak  ok232326.pak  ok271716.pak  ok271725.pak  ok271728.pak
doc/example-protocols/hotgas/qfp/qfp100.muh/: ja131922.pak  ja131924.pak  ja131928.pak  ja131929.pak
doc/example-protocols/hotgas/qfp/qfp208.muh/: ja131938.pak  ja131948.pak
doc/example-protocols/hotgas/so/so16.ouh/: ja132023.pak  ja132025.pak  ja132026.pak  ok271851.pak  ok271910.pak  ok272023.pak  ok272041.pak  ok272058.pak  ok272111.pak  ok272113.pak  ok272114.pak  ok272147.pak  ok312227.pak  ok312228.pak  ok312304.pak  ok312306.pak  ok312308.pak  ok312310.pak
fpchart/: CMakeLists.txt  fpchart.cpp  fpchart.h
pakfile/: CMakeLists.txt  Machine.cpp  Machine.h  MachineStates.cpp  MachineStates.h  pakfile.cpp  pakfile.h
tests/: CMakeLists.txt  test_basic.cc  test_file_arj.cpp  test_file_readrec.cpp  test_file_zlib.cpp  test_state_machine_c++.cpp  tests.h
tests/data/: file_zlib.pak
